Changelog
=========

2019.4.2 (unreleased)
---------------------

- Register virtual host monster on site setup for testserver [bierik]
- Fix setting agenda item description. [deiferni]
- Fix automatic start of additionally added sequential tasks. [phgross]
- Fix styling bug in tabbedview after showing bumblebee tooltip. [njohner]
- Only show workspace notification tab when feature is activated. [njohner]
- Fix response text for responsible changes to the same user. [phgross]
- Do not manipulate the persisten journal list on @history get. [phgross]
- Fix authorization handling when fetching the template_group_id. [phgross]
- Do not add document modified journal entry when saving file with OC RESTAPI. [njohner]
- Do not manipulate the persistent journal list on @journal get. [phgross]


2019.4.1 (2019-11-26)
---------------------

- Update French translations. [njohner]
- Update oneoffixx intergration to latest API changes. [phgross]


2019.4.0 (2019-11-22)
---------------------

- Pin ftw.monitor to 1.0.0. [lgraf]
- Allow teams as task responsible when delegating a task. [phgross]
- Fix contentlisting and API summary for documents inside tasks. [phgross]
- Also return facet labels in solrsearch endpoint. [njohner]
- Fix fallback to default sorting index in listing endpoint. [njohner]
- Display returned documents in the task-resolved history entry. [phgross]
- Fixes is already done check in multi admin unit tasks completion. [phgross]
- Fix @history patch endpoint to correctly revert to older document version. [njohner]
- Fix unicode error in @listing endpoint filters. [lgraf]
- Fix document serialization for older document versions. [phgross]
- Add main dossier count to contentstats. [njohner]
- No longer add journal entry for document file modification. [njohner]
- Revoke permissions for former responsible, when task gets rejected. [phgross]
- Use BaseResponse for proposal history to add API support. [njohner]